Comments link aligned with "Read more..." button. Response button fixed. Now unregistered user can not add comments.

--- a/css/main.css
+++ b/css/main.css
@@ -756,6 +756,10 @@ a:focus, a:hover {
   text-align: center;
 }
 
+.comments-link{
+  margin-top: 10px;
+}
+
 /*=== About =================================================================*/
 
 .about{
